--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.github.jcustenborder.kafka.connect</groupId>
         <artifactId>kafka-connect-parent</artifactId>
-        <version>1.0.0</version>
+        <version>2.1.0-cp1</version>
     </parent>
     <artifactId>kafka-connect-redis</artifactId>
     <version>0.0.2-SNAPSHOT</version>
@@ -69,35 +69,18 @@
             <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
-                <version>0.9.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>kafka-connect</goal>
-                        </goals>
-                        <configuration>
-                            <ownerUsername>jcustenborder</ownerUsername>
-                            <confluentControlCenterIntegration>true
-                            </confluentControlCenterIntegration>
-                            <documentationUrl>
-                                https://jcustenborder.github.io/kafka-connect-documentation/
-                            </documentationUrl>
-                            <ownerName>Jeremy Custenborder</ownerName>
-                            <dockerNamespace>jcustenborder</dockerNamespace>
-                            <dockerName>kafka-connect-docker</dockerName>
-                            <pluginTypes>
-                                <pluginType>sink</pluginType>
-                            </pluginTypes>
-                            <tags>
-                                <tag>Redis</tag>
-                            </tags>
-                            <title>Kafka Connect Redis</title>
-                            <supportUrl>${pom.issueManagement.url}</supportUrl>
-                            <supportSummary>Support provided through community involvement.
-                            </supportSummary>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <documentationUrl>
+                        https://jcustenborder.github.io/kafka-connect-documentation/
+                    </documentationUrl>
+                    <componentTypes>
+                        <componentType>sink</componentType>
+                    </componentTypes>
+                    <tags>
+                        <tag>Redis</tag>
+                    </tags>
+                    <title>Kafka Connect Redis</title>
+                </configuration>
             </plugin>
         </plugins>
     </build>
