--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.github.jcustenborder.kafka.connect</groupId>
         <artifactId>kafka-connect-parent</artifactId>
-        <version>2.1.0-cp1</version>
+        <version>2.1.1-cp1</version>
     </parent>
     <artifactId>kafka-connect-redis</artifactId>
     <version>0.0.2-SNAPSHOT</version>
@@ -69,18 +69,42 @@
             <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
-                <configuration>
-                    <documentationUrl>
-                        https://jcustenborder.github.io/kafka-connect-documentation/
-                    </documentationUrl>
-                    <componentTypes>
-                        <componentType>sink</componentType>
-                    </componentTypes>
-                    <tags>
-                        <tag>Redis</tag>
-                    </tags>
-                    <title>Kafka Connect Redis</title>
-                </configuration>
+                <version>0.11.2</version>
+                <executions>
+                    <execution>
+                        <id>hub</id>
+                        <goals>
+                            <goal>kafka-connect</goal>
+                        </goals>
+                        <configuration>
+                            <confluentControlCenterIntegration>true</confluentControlCenterIntegration>
+                            <documentationUrl>https://docs.confluent.io/current/connect/kafka-connect-redis/
+                            </documentationUrl>
+                            <componentTypes>
+                                <componentType>sink</componentType>
+                            </componentTypes>
+                            <tags>
+                                <tag>key</tag>
+                                <tag>value</tag>
+                                <tag>cache</tag>
+                                <tag>redis</tag>
+                            </tags>
+                            <title>Kafka Connect Redis</title>
+                            <supportProviderName>Confluent, Inc.</supportProviderName>
+                            <supportUrl>https://docs.confluent.io/current/connect/kafka-connect-redis/</supportUrl>
+                            <supportSummary><![CDATA[Confluent is introducing this preview connector to
+                                gain early feedback from developers. It should only be used for
+                                evaluation and non-production testing purposes or to provide
+                                feedback to Confluent and is subject to the
+                                <a href="https://www.confluent.io/confluent-software-evaluation-license/">Confluent Software Evaluation License.</a>
+                                Confluent will provide support for this connector for evaluation and non-production testing purposes.
+
+                                Comments, questions and suggestions related to preview features
+                                are encouraged. Confluent customers may submit questions and suggestions, and file support tickets via the
+                                <a href="https://support.confluent.io/">Confluent Support Portal.</a>]]></supportSummary>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
