--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <skipAssembly>true</skipAssembly>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
                 <version>0.11.2</version>
@@ -96,6 +109,9 @@
                                 <![CDATA[This connector is <a href="https://www.confluent.io/subscription/">supported by Confluent</a> as part of a
                                 <a href="https://www.confluent.io/product/confluent-platform/">Confluent Platform</a> subscription.]]>
                             </supportSummary>
+                            <excludes>
+                                <exclude>io.netty:*</exclude>
+                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
